cambio a el idioma de el registro de usuarios

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -44,5 +44,6 @@
     "VALIDACION_ROL": "You must select a role",
     "PAGINA_LOGIN": {
         "AVISO_ENVIO": "Registering, please wait" 
-    }
+    },
+    "REGISTRO": "Registered users"
 }
