--- a/src/assets/i18n/fr-FR.json
+++ b/src/assets/i18n/fr-FR.json
@@ -44,5 +44,6 @@
     "VALIDACION_ROL": "Vous devez sélectionner un rôle",
     "PAGINA_LOGIN": {
         "AVISO_ENVIO": "Inscription, veuillez patienter" 
-    }
+    },
+    "REGISTRO": "Utilisateurs enregistrés"
 }
