cambio idioma a los botones agregados

--- a/src/assets/i18n/en-US.json
+++ b/src/assets/i18n/en-US.json
@@ -45,5 +45,7 @@
     "PAGINA_LOGIN": {
         "AVISO_ENVIO": "Registering, please wait" 
     },
-    "REGISTRO": "Registered users"
+    "REGISTRO": "Registered users",
+    "SALIR": "Go out",
+    "SALUDO_USUARIO": "Welcome"
 }
