--- a/src/assets/i18n/es-CO.json
+++ b/src/assets/i18n/es-CO.json
@@ -45,6 +45,7 @@
     "PAGINA_LOGIN": {
         "AVISO_ENVIO": "Registrando, por favor espere" 
     },
-    "REGISTRO": "Usuarios Registrados"
-
+    "REGISTRO": "Usuarios Registrados",
+    "SALIR": "Salir",
+    "SALUDO_USUARIO": "Bienvenido"
 }
