--- a/src/assets/i18n/es-CO.json
+++ b/src/assets/i18n/es-CO.json
@@ -47,5 +47,7 @@
     },
     "REGISTRO": "Usuarios Registrados",
     "SALIR": "Salir",
-    "SALUDO_USUARIO": "Bienvenido"
+    "SALUDO_USUARIO": "Bienvenido",
+    "USUARIOS_REGISTRADOS": "Usuarios Registrados",
+    "ROL": "Rol"
 }
