--- a/src/assets/i18n/fr-FR.json
+++ b/src/assets/i18n/fr-FR.json
@@ -47,5 +47,7 @@
     },
     "REGISTRO": "Utilisateurs enregistrés",
     "SALIR": "Sortir",
-    "SALUDO_USUARIO": "Accueillir"
+    "SALUDO_USUARIO": "Accueillir",
+    "USUARIOS_REGISTRADOS": "Utilisateurs enregistrés",
+    "ROL": "Rôle"
 }
